# myrafproject

./: .coverage  .gitignore  .readthedocs.yaml  README.md  fPlot.py  gingawidgetFile.py  gui.py  logfile  main.py  matplotlibwidgetFile.py  myraf_astrometry.py  myraf_fits.md  myraf_fits_array.md  observatories.obs  pyproject.toml  requirements.txt  requirements_dev.txt  run_myraf  run_myraf_on_ubuntu  settings.set  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
alipy/: align.py  f2n.py  pysex.py  star.py
alipy_cats/: V523_Cas-001B.pysexcat  V523_Cas-001U.pysexcat  V523_Cas-001V.pysexcat  V523_Cas-002B.pysexcat  V523_Cas-002U.pysexcat  V523_Cas-002V.pysexcat  V523_Cas-003V.pysexcat
docs/: spy.dia
example/command_line/: align.md  arith.md  bin.md  crop.md  header.md  hedit.md  im.md  map2sky.md  p2s.md  rotate.md  s2p.md  shift.md  show.md  stat.md  value.md
example/fits/: arithmetic.ipynb  calibration.ipynb  create.ipynb  data.ipynb  header.ipynb  map_to_sky.ipynb  other.ipynb  photometry.ipynb  source_extraction.ipynb  transformation.ipynb  visualize.ipynb
example/fits_array/: arithmetic.ipynb  calibration.ipynb  combine.ipynb  create.ipynb  data.ipynb  header.ipynb  oc.mov  other.ipynb  photometry.ipynb  source_extraction.ipynb  transformation.ipynb  video.ipynb  visualize.ipynb
gui/: albategnius.py  albategnius.ui  align_manual.py  align_manual.ui  all.py  animate.py  animate.ui  combine_subtraction.py  combine_subtraction.ui  display.py  display.ui  func.py  function.py  graph.py  graph.ui  header_calculator.py  header_calculator.ui  header_editor.py  header_editor.ui  header_extractor.py  header_extractor.ui  help_aboutmyraf.py  help_aboutmyraf.ui  help_analyse.py  help_analyse.ui  help_credits.py  help_credits.ui  help_editor.py  help_editor.ui  help_help_alipy.py  help_help_alipy.ui  help_help_astrometrynet.py  help_help_astrometrynet.ui  help_help_ccleaner.py  help_help_ccleaner.ui  help_help_ginga.py  help_help_ginga.ui  help_licence.py  help_licence.ui  help_logger.py  (+24 more)
myobservat/: DSAZ  NOV  Palomar  aao  adyu60  apo  aries  ata50  bao  bgsuo  bmo  bosque  boyden  ca  casleo  cfht  ctio  dao  ekar  eso36m  esontt  esovlt  euo  flwo  flwo1  fmo  gemini-north  gemini-south  holi  iao  irtf  keck  kpno  lapalma  lasilla  lco  lick  lmo  lna  lowell  (+20 more)
myraflib/: analyse.py  cosm.py  env.py  myAst.py
pyraf/: clcache.v2.dir
skip.github/workflows/: python-package.yml
source/: cli.rst  conf.py  example.rst  fits.rst  index.rst  motivation.rst  requirements.txt
source/cli/: cli_arith.rst  cli_crop.rst  cli_hedit.rst  cli_map2sky.rst  cli_shift.rst  cli_stat.rst  cli_value.rst
source/code/: fits_array_code.py  fits_array_code_none_myraf.py  fits_array_photometry.py  fits_code.py  fits_code_none_myraf.py
source/fits/: fits.rst  fits_add.rst  fits_background.rst  fits_ccd.rst  fits_ccdproc.rst  fits_coordinate_picker.rst  fits_cosmic_clean.rst  fits_daofind.rst  fits_data.rst  fits_div.rst  fits_from_data_header.rst  fits_from_image.rst  fits_from_path.rst  fits_header.rst  fits_hedit.rst  fits_imarith.rst  fits_map_to_sky.rst  fits_photometry_phu.rst  fits_photometry_sep.rst  fits_pow.rst  fits_show.rst  fits_skys_to_pixels.rst  fits_solve_field.rst  fits_value.rst
source/fitsarray/: fitsarray_align.rst  fitsarray_append.rst  fitsarray_background.rst  fitsarray_bin.rst  fitsarray_ccd.rst  fitsarray_crop.rst  fitsarray_dark_correction.rst  fitsarray_flat_combine.rst  fitsarray_flat_correction.rst  fitsarray_from_paths.rst  fitsarray_from_video.rst  fitsarray_group_by.rst  fitsarray_hedit.rst  fitsarray_hselect.rst  fitsarray_map_to_sky.rst  fitsarray_photometry.rst  fitsarray_photometry_phu.rst  fitsarray_pow.rst  (+10 more)
src/: commands.py  main.py  myraf_gui.py
test/: .coverage  fits.py
tests/: test_fits.py  test_fits_array.py
(+81 files in other folders)
