[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myraf"
version = "3.1.5"
description = "MYRaf; an astropy wrapper for astronomical photometry"
authors = [
    { name = "Mohammad S.Niaei", email = "niaei@pardus.org.tr" },
    { name = "Yücel KILIÇ", email = "ykilic@iaa.es" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "astroalign",
    "astropy",
    "astroquery",
    "ccdproc",
    "matplotlib",
    "mpl_point_clicker",
    "numpy==1.24.4",
    "opencv-python-headless",
    "pandas",
    "photutils",
    "python_dateutil",
    "sep",
    "typing_extensions",
    "scipy",
    "ginga",
    "PyQt5",
    "pyqtdarktheme",
    "tqdm",
    "tox"
]

[project.scripts]
myraf = "myraflib.myraf_gui:main"
im = "commands:main"

[tool.setuptools]
packages = ["myraflib"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"myraflib" = ["py.typed", "sample.fits"]
