[metadata]
name = myraf
description = MYRaf is an astropy wrapper for astronomical photometry
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1 Beta
author = Mohammad S.Niaei, Yücel KILIÇ
author_email = m.shemuni@gmail.com, ykilic@iaa.es
keywords = Fits, Photometry
license = GNU/GPL V3
license_files = LICENSE
url = https://github.com/myrafproject/myrafproject
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages =
    myraflib
install_requires =
    astroalign
    astropy
    ccdproc
    matplotlib
    mpl_point_clicker
    numpy
    pandas
    photutils
    python_dateutil
    sep
    typing_extensions
    scipy
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
myraflib =
    py.typed
    sample.fits

[options.entry_points]
console_scripts =
    myraf = main:main

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401
