[metadata]
name = myraf
description =  MYRaf; an astropy wrapper for astronomical photometry
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.2 Beta
author = Mohammad S.Niaei, Yücel KILIÇ
author_email = niaei@pardus.org.tr, ykilic@iaa.es
keywords = Fits, Photometry
license = GNU/GPL V3
license_files = LICENSE
url = https://github.com/myrafproject/myrafproject
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages =
    myraflib
install_requires =
    astroalign
    astropy
    astroquery
    ccdproc
    matplotlib
    mpl_point_clicker
    numpy==1.24.4
    opencv-python-headless
    pandas
    photutils
    python_dateutil
    sep
    typing_extensions
    scipy
    ginga
    PyQt5
    pyqtdarktheme
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
myraflib =
    py.typed
    sample.fits

[options.entry_points]
console_scripts =
    myraf = myraf_gui:main

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401
exclude =
    src/myrafgui,
    src/myraf_gui.py,
